generando configuración jaas zk y storm