@@ -1,4 +1,5 @@
 #!/bin/bash
 
-export MAVEN_OPTS="-Xmx1024M"
+export MAVEN_OPTS="-Xmx2048m"
 
+export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxPermSize=512m"
